ajuste de rotas e variaveis

--- a/centos/Vagrantfile
+++ b/centos/Vagrantfile
@@ -3,22 +3,22 @@ BOX_IMAGE = "centos/7"
 Vagrant.configure("2") do |config|
   config.vm.define "ansible_server" do |ansible_server|
     ansible_server.vm.box = BOX_IMAGE
-    ansible_server.vm.hostname = "ansible-server"
-    ansible_server.vm.network "public_network", ip: "192.168.1.210", bridge: "enp3s0"
+    ansible_server.vm.hostname = "ansible-server.192.168.0.50.nip.io"
+    ansible_server.vm.network "public_network", ip: "192.168.0.50", bridge: "wlp0s20f3"
   end
   config.vm.define "ansible_vm_01" do |ansible_vm_01|
     ansible_vm_01.vm.box = BOX_IMAGE
     ansible_vm_01.vm.hostname = "ansible-vm-01"
-    ansible_vm_01.vm.network "public_network", ip: "192.168.1.211", bridge: "enp3s0"
+    ansible_vm_01.vm.network "public_network", ip: "192.168.0.51", bridge: "wlp0s20f3"
   end
   config.vm.define "ansible_vm_02" do |ansible_vm_02|
     ansible_vm_02.vm.box = BOX_IMAGE
     ansible_vm_02.vm.hostname = "ansible-vm-02"
-    ansible_vm_02.vm.network "public_network", ip: "192.168.1.212", bridge: "enp3s0"
+    ansible_vm_02.vm.network "public_network", ip: "192.168.0.52", bridge: "wlp0s20f3"
   end
   config.vm.provider "virtualbox" do |vb|
   vb.memory = "2048"
-  vb.cpus = 1
+  vb.cpus = 2
   
   
   config.vm.provision "shell", inline: <<-SHELL
